User Guide: Rename moments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,7 @@ nav:
       - Herunterladen: user-guide/organize/download.md
       - Videos: user-guide/organize/video.md
       - Orte: user-guide/organize/places.md
-      - Erlebnisse: user-guide/organize/moments.md
+      - Ereignisse: user-guide/organize/moments.md
       - Kalender: user-guide/organize/calendar.md
       - Ordner: user-guide/organize/folders.md
       - Panoramas: user-guide/organize/panoramas.md
