Site: Update config in mkdocs.yml and mkdocs.deploy.yml

--- a/mkdocs.deploy.yml
+++ b/mkdocs.deploy.yml
@@ -9,6 +9,7 @@ plugins:
         - dl.photoprism.app/*
         - www.photoprism.app/*
         - docs.photoprism.app/*
+        - docs-de.photoprism.app/*
         - a.photoprism.app/*
         - i.photoprism.app/*
         - goreportcard.com/*
