--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,7 +86,7 @@ extra_css:
 # External links.
 extra:
   generator: false
-  homepage: https://photoprism.app
+  homepage: https://www.photoprism.app/
   alternate:
     - name: 🇬🇧 English
       link: https://docs.photoprism.app/
