User Guide: Add instructions for setting cover images include new keyboard shortcuts section.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
       - Ordner: user-guide/organize/folders.md
       - Panoramas: user-guide/organize/panoramas.md
       - Scans: user-guide/organize/scans.md
+      - Tastenkombinationen: user-guide/organize/keyboard-shortcuts.md
   - Teilen:
       - Linkfreigabe: user-guide/share/share.md
       - Dateien hochladen: user-guide/share/services-share.md
